fix: alignment of title, reading time, author, and text

--- a/packages/nextjs-blog/src/app/_components/markdown-styles.module.css
+++ b/packages/nextjs-blog/src/app/_components/markdown-styles.module.css
@@ -34,7 +34,7 @@
 .article h3,
 .article h4,
 .article h5 {
-    @apply mt-4 m-2;
+    @apply mt-4 mr-2 mb-2;
 }
 
 .author {
